# Cognitive-Alarm-System

./: .env.example  .gitignore  01_Authentication.sql  02_Alarm_Module.sql  03_Analytics_Module.sql  API_DOCUMENTATION.md  ARCHITECTURE.md  App.jsx  CHANGELOG.md  CONFIGURATION.md  Cognitive Alarm Platform - Milestone 1.docx  Cognitive Alarm Platform - Milestone 2.docx  Cognitive_Alarm_Milestone2.postman_collection.json  Cognitive_Alarm_Platform_Milestone_1.docx  DATABASE_DOCUMENTATION.md  DEPENDENCIES.md  FEATURES.md  FOLDER_STRUCTURE.md  ICAP Milestone - 2.pptx  INSTALLATION_GUIDE.md  Intelligent Cognitive Alarm Platform - Milestone 2.pptx  LICENSE.md  Lucid_Cognitive_Challenge_Engine (1).pptx  MILESTONE_2_REPORT.md  Milestone2_Documentation.docx  PROJECT_OVERVIEW.md  PROJECT_PROGRESS.md  Postgre_Alarm_Single.sql  README copy.md  README.md  TESTING_GUIDE.md  analytics.py  app.tsx  challenge_analytics.py  challenge_score.py  difficulty.py  docker-compose.yml  firebase.json  log.txt  loginscreen.tsx  (+13 more)
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  icap.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/api/: deps.py
backend/app/auth/: dependencies.py  jwt_handler.py
backend/app/config/: settings.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_alarms.py  test_auth.py  test_challenges.py  test_health.py  test_protected.py  test_users.py
(+552 files in other folders)
